# redditMatrix

./: .gitignore  .prettierrc  README.md  capacitor.config.json  comlink-workers.d.ts  deploy.sh  index.html  manifest.webmanifest  package.json  pnpm-lock.yaml  sw.js  vite.config.ts
assets/: CancellableList.15ab555b.js  CancellableList.e08264e0.css  Card.1b95d5a1.css  Card.4f5ef0cb.js  _fallback.31644b71.css  _fallback.4cfdd99c.js  _layout.5b3d3815.js  _layout.eb722484.css  _subreddit_.5508ddf3.css  _subreddit_.6824c6fd.js  aria-property.797fe874.js  fuzzy_complete_bg.wasm  if-defined.6486e9c9.js  index.3a6f08c7.css  index.7184bdcf.js  index.bb1110f9.js  index.c5e38cdc.js  index.f581e6e2.css  mwc-list.64318535.js  search.85302df6.js  settings.94998b63.css  settings.bcedddf0.js  test.17f353c8.js  test.328eea4a.css  transition.171a74a8.js  vendor.0ae95c6a.js  web.4eda06fe.js  web.8d7e82a8.js  web.fbc0e260.js
fuzzy_complete/: Cargo.toml
fuzzy_complete/src/: lib.rs
src/: App.svelte  global.scss  main.ts  variables.scss
src/components/: CancellableList.svelte  Card.svelte  Grid.svelte  List.svelte  Navbar.svelte  Results.svelte
src/components/navbar/: HomeNav.svelte  InputNav.svelte  SelectionNav.svelte  SubredditNav.svelte
src/pages/: _fallback.svelte  _layout.svelte  index.svelte  settings.svelte  test.svelte
src/pages/r/: [subreddit].svelte
src/store/: app.ts  user.ts
src/utils/: TabsTransition.svelte  actions.ts  api.ts  search.ts  transition.ts
